# gt

./: .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  bt.bzl  go.mod
argparse/: enum.go  file.go  value.go
argparse/example/: auto-complete-example.go  main.go  nested-subcmds-example.go  pos-args-cmd-examples.go
codegen/: code_builder.go  go_code_builder.go  util.go
codegenutil/: code_builder.go
filesystem/: extensions_test.go  local.go  local_test.go  readonly_test.go  sub_test.go
go/argparse/: BUILD.bazel  README.md  command.go  commandline.go  enum.go  file.go  value.go
go/argparse/example/: BUILD.bazel  auto-complete-example.go  main.go  nested-subcmds-example.go  pos-args-cmd-examples.go
go/codegenutil/: BUILD.bazel  go_code_builder.go  util.go
go/filesystem/: BUILD.bazel  errors.go  extensions.go  extensions_test.go  filesystem.go  local.go  local_test.go  readonly.go  readonly_test.go  sub.go  sub_test.go
go/testing/expect/: BUILD.bazel  expect.go  expect_test.go
go/testing/suite/: BUILD.bazel  suite.go  suite_test.go
go/tools/lr/internal/: grammar.go  lr.go  sort.go
go/tools/lr/internal/code_gen/: code_gen.go  go_lr_code_gen.go  rust_lr_code_gen.go
go/tools/lr/internal/parser/: const.go  grammar.go  lexer.go  node.go
go/tools/template/internal/: grammar.go  grammar.lr  lexer.go  nodes.go  raw_body_lexer.go  reducer.go
go/tools/template/internal/manual_codegen/: codegen.go
go/tools/template/internal/templated_codegen/: Makefile  body.go  body.template  break.go  break.template  continue.go  continue.template  copy-section.go  copy-section.template  embed.go  embed.template  error.go  error.template  file.go  file.template  for.go  for.template  if.go  if.template  return.go  return.template  substitute.go  substitute.template  switch.go  switch.template  template.go  text.go  text.template
lexer/: buffered_reader.go  buffered_reader_test.go
lexutil/: analysis.go  buffered_reader.go  buffered_reader_test.go  emitter.go  lexer.go  location.go  token.go  tokenize.go
parseutil/: buffered_reader.go  buffered_reader_test.go  emitter.go  escape.go  escape_test.go  lexer.go  location.go  token.go  tokenize.go
stringutil/: intern.go
testing/expect/: expect.go  expect_test.go
testing/suite/: suite_test.go
tools/lr/: README.txt
tools/lr/internal/: grammar.go  lang_specs.go  lr.go  sort.go
tools/lr/internal/code_gen/: code_gen.go  go_lr_code_gen.go  rust_lr_code_gen.go
tools/lr/internal/code_gen/debug_template/: file.go  file.template
tools/lr/internal/code_gen/go_template/: file.go  file.template
tools/lr/internal/code_gen/rust_template/: file.go  file.template
tools/lr/internal/parser/: Makefile  const.go  grammar.go  grammar.lr  lexer.go  node.go  parse.go  reducer.go
tools/lr/parseutil/: location_reader.go  tokenize.go
tools/template/: README.txt
tools/template/internal/: Makefile  const.go  grammar.go  grammar.lr  lexer.go  nodes.go  raw_body_lexer.go  reducer.go
tools/template/internal/manual_codegen/: codegen.go
tools/template/internal/templated_codegen/: body.go  body.template  break.go  break.template  continue.go  continue.template  copy-section.go  copy-section.template  embed.go  embed.template  error.go  error.template  file.go  file.template  for.go  for.template  if.go  if.template  return.go  return.template  substitute.go  substitute.template  switch.go  switch.template  template.go  text.go  text.template
(+18 files in other folders)
