load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
  name = "filesystem",
  importpath = "github.com/pattyshack/bt/go/filesystem",
  srcs = [
    "errors.go",
    "extensions.go",
    "filesystem.go",
    "local.go",
    "readonly.go",
    "sub.go",
  ],
  visibility = ["//visibility:public"],
)

go_test(
  name = "filesystem_test",
  importpath = "github.com/pattyshack/bt/go/filesystem",
  srcs = [
    "extensions_test.go",
    "local_test.go",
    "readonly_test.go",
    "sub_test.go",
  ],
  embed = [
    ":filesystem",
  ],
  deps = [
    "//go/testing/expect",
    "//go/testing/suite",
  ],
  size="small",
)
