load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
  name = "expect",
  importpath = "github.com/pattyshack/bt/go/testing/expect",
  srcs = [
    "expect.go",
  ],
  visibility = ["//visibility:public"],
)

go_test(
  name = "expect_test",
  importpath = "github.com/pattyshack/bt/go/testing/expect",
  srcs = [
    "expect_test.go",
  ],
  embed = [
    ":expect",
  ],
)
