load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
  name = "suite",
  importpath = "github.com/pattyshack/bt/go/testing/suite",
  srcs = [
    "suite.go",
  ],
  visibility = ["//visibility:public"],
)

go_test(
  name = "suite_test",
  importpath = "github.com/pattyshack/bt/go/testing/suite",
  srcs = [
    "suite_test.go",
  ],
  embed = [
    ":suite",
  ],
  deps = [
    "//go/testing/expect"
  ],
)
